test/cases/compile_errors/stage1/obj/overflow_in_enum_value_allocation.zig
const Moo = enum(u8) {
    Last = 255,
    Over,
};
pub fn main() void {
  var y = Moo.Last;
  _ = y;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:3:5: error: enumeration value 256 too large for type 'u8'
